# MTrust-main

./: .env  .gitignore  README.md  _gen.py  _verify_prompt.py  _verify_sql.py  _write_deepeval.py  _write_llm_service.py  live_app.py  mtrust_result_20260422_142300.json  mtrust_result_20260422_145243.json  pyproject.toml  run_demo.py  run_mtrust.py  run_mtrust_cache.py  run_mtrust_test.py  smoke_test_confidence.py  test_pipeline.py  tmodel_app.py
data/: case_one.json  cases.json  cases_core.json  cases_risk_level.json  cases_risk_level_simple.json  cases_risk_level_test.json  data_transfer.py  label_transfer.py  rule.yaml  样例.xlsx
mtrust/: config.py  config.yaml  generation_mode.py  llm_service.py  utils.py
mtrust/confidence/: confidence.py
mtrust/evaluators/: deepeval_adapter.py  spec_evaluator.py
mtrust/loader/: spec_loader.py
mtrust/pipeline/: pipeline.py
mtrust/policy/: trigger_engine.py
mtrust/signals/: signal_detector.py
mtrust/specs/00_schema/: runtime_schema.yaml
mtrust/specs/01_domain/: metric_definition.yaml  risk_rules.yaml
mtrust/specs/02_signal/: signals.yaml
mtrust/specs/03_confidence/: confidence_model.yaml
mtrust/specs/04_policy/: trigger_policy.yaml
mtrust/specs/05_pipeline/: evaluator_pipeline.yaml
mtrust/specs/06_evaluator/: audit_confidence.yaml  audit_false_positive.yaml  deepeval_adapter.yaml  qa_correctness.yaml  risk_confidence-bestnow.yaml  risk_confidence-new.yaml  risk_confidence-original.yaml  risk_confidence.yaml  sql_validation.yaml
mtrust/utils/: prompt_builder.py
service/: api.py  app.py
(+3 files in other folders)
